refactor(product): improve Redis caching for paginated products